Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.3.0
-
Fix Version/s: 5.4.0
-
Component/s: GUI: Accessibility (a11y)
-
Commits:d71f9d8c05d70053f2ce46dbb2203309addc0f93
Description
I am not sure this is a real issue or it's imposed by the QT gui paradigm. I even have no steps to reproduce here.
On linux the major screen reader for graphical desktop orca has a feature called flat review. It allows reviewing screen content in a 2D representation. It allows blind individuals to browse the text shown on the screen by lines, words and even by characters.
With GTK apps while using flat review the content is usually restricted to the currently showing window or child window.
With QT apps this is not currently honoured. While using flat review inside a dialog window the flat review contains content from the parent windows from the same application.
Is this a good candidate for a feature request?
Attachments
Issue Links
- relates to
-
QTBUG-39441 With orca on linux there are issues while reading message dialogs
-
- Closed
-